--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@alfalab/core-components": "^44.6.0",
+    "@alfalab/core-components-button": "^11.2.0",
     "@alfalab/core-components-circular-progress-bar": "^3.4.2",
+    "@alfalab/icons": "^3.204.0",
     "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
